[package]
name = "gas-estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
ethers = "2.0"
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
